# Render_V2

./: CMakeLists.txt  CMakePresets.json  discover.md  readme.md  render_v2.code-workspace  texture_converter_simple.md
Render/: CMakeLists.txt
Render/include/: Render.hpp
Render/include/Core/: Application.hpp  ApplicationStarter.hpp  ComPointer.hpp  Layer.hpp  LayerStack.hpp  RenderDLLMacro.hpp
Render/include/Graphics/: Buffer.hpp  CopyPipeline.hpp  ExecutionPipeline.hpp  GPUInstrumentator.hpp  GraphicsContext.hpp  ImguiContext.hpp  Shader.hpp  Texture.hpp  TextureCaster.hpp
Render/include/Platform/Graphics/D3D12/: D3D12Buffer.hpp  D3D12Context.hpp  D3D12CopyPipeline.hpp  D3D12ExecutionPipeline.hpp  D3D12ImguiContext.hpp  D3D12Instrumentator.hpp  D3D12Shader.hpp  D3D12Texture.hpp  D3D12TextureCaster.hpp
Render/include/Platform/Graphics/Texture/DDS/: .gitignore
Render/include/Platform/Graphics/VK/: VKBuffer.hpp  VKContext.hpp  VKCopyPipeline.hpp  VKExecutionPipeline.hpp  VKImguiContext.hpp  VKInstrumentator.hpp  VKShader.hpp  VKTexture.hpp  VKTextureCaster.hpp
Render/include/Platform/Window/: SDLImguiWindowController.hpp  SDLWindow.hpp
Render/include/Window/: ImguiWindowController.hpp  Window.hpp
Render/src/: Render.cpp
Render/src/Core/: Application.cpp  ApplicationStarter.cpp  Layer.cpp  LayerStack.cpp
Render/src/Graphics/: Buffer.cpp  CopyPipeline.cpp  GPUInstrumentator.cpp  GraphicsContext.cpp  ImguiContext.cpp  Shader.cpp  Texture.cpp  TextureCaster.cpp
Render/src/Platform/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Context.cpp  D3D12CopyPipeline.cpp  D3D12ExecutionPipeline.cpp  D3D12ImguiContext.cpp  D3D12Instrumentator.cpp  D3D12Shader.cpp  D3D12Texture.cpp  D3D12TextureCaster.cpp
Render/src/Platform/Graphics/Texture/DDS/: .gitignore
Render/src/Platform/Graphics/VK/: VKBuffer.cpp  VKContext.cpp  VKCopyPipeline.cpp  VKExecutionPipeline.cpp  VKImguiContext.cpp  VKInstrumentator.cpp  VKShader.cpp  VKTexture.cpp  VKTextureCaster.cpp
Render/src/Platform/Window/: SDLImguiWindowController.cpp  SDLWindow.cpp
Render/src/Window/: ImguiWindowController.cpp  Window.cpp
ShaderManager/: CMakeLists.txt
ShaderManager/include/: CSOCompiler.hpp  Compiler.hpp  CompilerExceptions.hpp  DXCSafeInclude.hpp  InputBufferLayout.hpp  SPVCompiler.hpp  SamplerLayout.hpp  ShaderManagerDLLMacro.hpp  TextureLayout.hpp  UniformsLayout.hpp
ShaderManager/src/: CSOCompiler.cpp  Compiler.cpp  CompilerExceptions.cpp  InputBufferLayout.cpp  SPVCompiler.cpp  SamplerLayout.cpp  TextureLayout.cpp  UniformsLayout.cpp
TargetView/: CMakeLists.txt  cast_texture.ps1
TargetView/assets/shaders/: HelloTriangle.hlsl  MipsD3D12.hlsl  MipsSimpler.hlsl
TargetView/assets/textures/: .gitignore
TargetView/include/: AppContext.hpp  ExampleLayer.hpp
TargetView/src/: .gitignore  AppContext.cpp  D3D12ContextExport.cxx.in  ExampleLayer.cpp  entry.cpp
Tests/: CMakeLists.txt
Tests/src/: Sample.cpp
Utils/: CMakeLists.txt
Utils/include/: CommonException.hpp  Console.hpp  FileHandler.hpp  Image.hpp  JPEGImage.hpp  PNGImage.hpp  UtilsDLLMacro.hpp
Utils/src/: CommonException.cpp  Console.cpp  FileHandler.cpp  Image.cpp  JPEGImage.cpp  PNGImage.cpp
installers/: d3d12core.ps1  d3dtex.ps1  dxc.ps1  eigen.ps1  glm.ps1  gtest.ps1  imgui.ps1  jsoncpp.ps1  libgit2.ps1  libjpeg_turbo.ps1  libpng.ps1  sdl3.ps1  spdlog.ps1  spirv_headers.ps1  spirv_tools.ps1  vktex.ps1  vulkan_extensions.ps1  vulkan_headers.ps1  vulkan_loader.ps1  vulkan_regedit.ps1  vulkan_validation.ps1  zlib.ps1
